--- a/less/home-page.less
+++ b/less/home-page.less
@@ -23,6 +23,7 @@
     img {
       border-radius: 5px; 
       width: 100%; 
+      margin-top: 101.31px;
     }
   
   }
