--- a/less/mixins.less
+++ b/less/mixins.less
@@ -36,3 +36,7 @@
         border: 1px double @bg-color;
     }
 }
+
+.bg-opacity(@op-choice) {
+    background-color: rgba(246, 246, 246, @op-choice); 
+}
