--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,8 @@
     border-bottom: 2px double @nav-border;
     padding: 1.2% 0;
     .flex-center(column);
+    position: fixed;
+    .bg-opacity(.9);
 
     @media @phone {
         padding: 2.4% 0;
